<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Оракул</string>
    <string name="ask_question">Задати питання</string>
    <string name="settings">Налаштування</string>
    <string name="exit">Вихід</string>
    <string name="first_name">Імя</string>
    <string name="last_name">Прізвище</string>
    <string name="birth_date">Дата народження</string>
    <string name="male">Чоловік</string>
    <string name="female">Жінка</string>
    <string name="save">Зберегти</string>
    <string name="enter_question">Введіть ваше запитання</string>
    <string name="ask">Запитати</string>
    <string name="back_to_main">Повернутися на головну</string>
    <string name="select_date">Обрати дату</string>
</resources>

