<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:maxLength="15"
        android:scrollbars="vertical"
        style="@style/EditTextStyle"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/firstNameEditText"
        android:layout_marginTop="16dp"
        android:maxLength="15"
        android:scrollbars="vertical"
        style="@style/EditTextStyle"
        android:hint="@string/last_name" />

    <Button
        android:id="@+id/selectDateButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameEditText"
        android:layout_marginTop="16dp"
        style="@style/ButtonStyle"
        android:text="@string/select_date" />

    <TextView
        android:id="@+id/birthDateTextView"
        style="@style/TextViewStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectDateButton"
        android:layout_marginTop="16dp"
        android:text="@string/birth_date" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthDateTextView"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genderRadioGroup"
        android:layout_marginTop="16dp"
        style="@style/ButtonStyle"
        android:text="@string/save" />

    <Button
        android:id="@+id/backToMainButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveButton"
        android:layout_marginTop="16dp"
        style="@style/ButtonStyle"
        android:text="@string/back_to_main" />

</RelativeLayout>
