<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:id="@+id/questionEditText"
        style="@style/EditTextStyle"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:hint="@string/enter_question"
        android:inputType="textMultiLine"
        android:maxLength="36" />

    <Button
        android:id="@+id/askButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_below="@+id/questionEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        style="@style/ButtonStyle"
        android:text="@string/ask" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_below="@+id/askButton"
        android:layout_centerHorizontal="true"
        style="@style/TextViewStyle"
        android:scrollbars="vertical"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/backToMainButton"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/answerTextView"
        android:layout_marginTop="24dp"
        style="@style/ButtonStyle"
        android:text="@string/back_to_main" />
</RelativeLayout>
